--- a/index.html
+++ b/index.html
@@ -4,27 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<button id="1">1</button>
-<button id="2">2</button>
-<button id="3">3</button>
-<button id="4">4</button>
-
-<div id="div1"></div>
-<br><br><br>
-<div id="div2"></div>
-<br><br><br>
-<div id="div3"></div>
-<br><br><br>
-<div id="div4"></div>
+<button id="btn1">1</button>
 
 
 
-
-
-
-    <script src="main.js"></script>
+   <script src="main.js"></script> 
 </body>
 </html>
